--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "npm install && npm run build",
   "outputDirectory": "frontend/build",
+  "rootDirectory": "frontend",
   "framework": "create-react-app"
 }
