--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
-  "name": "cdt-jamaica",
-  "version": "1.0.0",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "frontend",
-    "cdt-sanity"
-  ],
-  "scripts": {
-    "start": "cd frontend && npm start",
-    "build": "echo 'Build is handled by Vercel using the frontend directory directly'",
-    "test": "cd frontend && npm test",
-    "vercel-build": "cd frontend && npm install && npm run build"
+  "dependencies": {
+    "@sanity/client": "^7.10.0",
+    "@sanity/image-url": "^1.2.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^12.23.12",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-h5-audio-player": "^3.10.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2",
+    "react-scripts": "^5.0.1",
+    "react-youtube": "^10.1.0",
+    "web-vitals": "^2.1.4"
   },
-  "engines": {
-    "node": ">=14.0.0"
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.31",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^12.0.2",
+    "tailwindcss": "^3.3.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "vercel-build": "npm install && npm run build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
