Fix Vercel deployment and backend connection
- Update Sanity client configuration for production
- Add CORS and environment variable handling
- Fix package.json scripts for Vercel
- Add Vercel configuration files

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,36 @@
 {
   "buildCommand": "npm install && npm run build",
-  "outputDirectory": "build"
+  "outputDirectory": "build",
+  "env": {
+    "REACT_APP_SANITY_PROJECT_ID": "@sanity_project_id",
+    "REACT_APP_SANITY_DATASET": "@sanity_dataset",
+    "NODE_ENV": "production"
+  },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
