--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "framer-motion": "^12.23.12",
+    "http-proxy-middleware": "^3.0.5",
+    "nodemailer": "^7.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-h5-audio-player": "^3.10.1",
@@ -29,6 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "node server.js",
+    "dev": "concurrently \"npm start\" \"npm run start:server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
