--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "framer-motion": "^12.23.12",
     "http-proxy-middleware": "^3.0.5",
+    "lucide-react": "^0.544.0",
     "nodemailer": "^7.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
