--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@portabletext/react": "^4.0.3",
     "@sanity/client": "^7.11.1",
     "@sanity/image-url": "^1.2.0",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -17,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.22",
     "http-proxy-middleware": "^3.0.5",
     "lucide-react": "^0.544.0",
     "nodemailer": "^7.0.6",
@@ -25,7 +26,7 @@
     "react-dom": "^19.1.1",
     "react-h5-audio-player": "^3.10.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0",
     "resend": "^6.0.2",
