--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "CDT Jamaica",
   "name": "CDT Jamaica Arts - Cultural Dance Theatre",
-  "description": "CDT is one of Jamaica's greatest dance companies, revered as a living national treasure for preserving the legacy of Tony Wilson's The Company Dance Theatre, founded in 1988, by providing modern dance training and through bringing cutting-edge choreography to stages in Jamaica and around the world.",
+  "description": "CDT is one of Jamaica's greatest dance companies, revered as a living national treasure for preserving the legacy of Tony Wilson's The Company Dance Theatre, founded in 1988, by providing modern-focused and Jamaican-based dance training and through bringing cutting-edge modern and contemporary dance to stages in Jamaica and around the world.",
   "icons": [
     {
       "src": "favicon.ico",
